styling content, changed order of elements, fixed buggy featured article title, added spacing in featured article, added container-flex class

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,46 +9,93 @@ body {
   --navigation-text: #717171;
   --main-text: #707070;
   --header-bg: #F8F8F8;
-  --main-heading-text: #143774;
-  --secondary-heading-text: #1792D2;
+  --dark-blue: #143774;
+  --light-blue: #1792D2;
   --sidebar-bg: #EBEBEB; 
   font-family: 'Ubuntu', sans-serif;
   font-size: 1.125rem;
+  color: var(--main-text);
   margin: 0;
+  font-weight: 300;
 }
 
 img {
   width: 100%;
+  margin-bottom: 1em;
+  display: block;
 }
 
 /******
   TYPOGRAPHY  
 *******/
 
+
 h1,
 h2,
 h3 {
-  color: var(--main-heading-text);
+  color: var(--dark-blue);
   font-family: 'Lora', serif;
+  font-weight: 400;
+  margin-top: 0;
 }
 
 h1 {
   font-size: 2rem;
-  font-weight: 400;
   margin: 0;
 }
 
 h2 {
   font-size: 1.5rem;
+  margin-bottom: 1em;
 }
+
+strong {
+  font-weight: 700;
+}
+
+a {
+  color: var(--light-blue);
+}
+
+.article-body {
+  margin-top: 0;
+}
+
+.article-read-more,
+.article-info {
+  font-size: .875rem;
+}
+
+.article-read-more {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.article-read-more:hover,
+.article-read-more:focus {
+  color: var(--dark-blue);
+  text-decoration: underline;
+}
+
 
 .subheading {
   font-size: .75rem;
   font-weight: 700;
-  color: var(--secondary-heading-text);
+  color: var(--light-blue);
   margin: 0;
   letter-spacing: .2rem;
 }
+
+.widget-body, .article-info {
+  font-size: .875rem;
+  margin-top: 0;
+}
+
+.article-info {
+  margin: 1em 0;
+}
+
 /******
    LAYOUT 
 *******/
@@ -57,6 +104,25 @@ h2 {
   margin: 0;
 }
 
+.container {
+  width: 90%;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.container-flex {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 765px) {
+  .container-flex {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+/* Header */
 
 header {
   background-color: var(--header-bg);
@@ -64,24 +130,6 @@ header {
   text-align: center;
 }
 
-.container {
-  width: 90%;
-  max-width: 900px;
-  margin: 0 auto;
-}
-
-.container-nav {
-  display: flex;
-  flex-direction: column;
-}
-
-@media (min-width: 765px) {
-  .container-nav {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
 
 .titles {
   margin-bottom: 1em;
@@ -105,7 +153,7 @@ nav ul {
 }
 
 nav li {
-  margin: 0.4em 0;
+  margin: 0.5em 0;
 }
 
 @media (min-width: 765px) {
@@ -113,7 +161,7 @@ nav li {
     flex-direction: row;
   }
   nav li {
-    margin-left: 2em;
+    margin: 1em;
   }
 }
 
@@ -125,12 +173,47 @@ li a {
 
 nav a:hover,
 nav a:focus {
-  color: var(--secondary-heading-text);
+  color: var(--light-blue);
 }
+
+/* Content */
+@media (min-width: 765px){
+  main {
+    width: 70%;
+  }
+  
+  aside {
+    width: 25%;
+  }
+}
+
+/* Article */
+
+.article-featured {
+  display: flex;
+  flex-direction: column;
+  padding: 2em 0;
+  margin: 2em 0;
+  border-bottom: 1px solid var(--main-text);
+}
+
+.article-featured-img {
+  order: -2;
+}
+
+.article-info {
+  order: -1;
+}
+
+.article-featured-title {
+  order: 0;
+}
+
+
 /* Footer */ 
 
 footer {
-  background-color: var(--main-heading-text);
+  background-color: var(--dark-blue);
 }
 
 .container-footer {
